# wgpu-cpu

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: color_triangle.wgsl  hello_shader.rs  hello_triangle.rs  shader.wgsl  triangle.wgsl
naga-cranelift/: Cargo.toml
naga-cranelift/src/: bindings.rs  compiler.rs  constant.rs  function.rs  lib.rs  product.rs  runtime.rs  simd.rs  tests.rs  types.rs  util.rs  value.rs  variable.rs
naga-cranelift/src/expression/: access.rs  array_length.rs  as.rs  atomic_result.rs  binary.rs  call_result.rs  compose.rs  constant.rs  cooperative.rs  derivative.rs  function_argument.rs  image.rs  literal.rs  load.rs  math.rs  mod.rs  override.rs  ray_query.rs  relational.rs  select.rs  splat.rs  subgroup.rs  swizzle.rs  unary.rs  variable.rs  workgroup.rs  zero_value.rs
naga-cranelift/src/statement/: atomic.rs  barrier.rs  block.rs  call.rs  emit.rs  if.rs  image.rs  kill.rs  loop.rs  mod.rs  ray_query.rs  return.rs  store.rs  subgroup.rs  switch.rs  work_group.rs
naga-interpreter/: Cargo.toml
naga-interpreter/src/: backend.rs  bindings.rs  entry_point.rs  interpreter.rs  lib.rs  memory.rs  module.rs  tests.rs  util.rs
naga-interpreter/src/compiler/: bindings.rs  compiler.rs  constant.rs  context.rs  expression.rs  function.rs  mod.rs  module.rs  product.rs  runtime.rs  simd.rs  tests.rs  types.rs  util.rs  value.rs  variable.rs
naga-interpreter/src/compiler/expression/: access.rs  array_length.rs  as.rs  atomic_result.rs  binary.rs  call_result.rs  compose.rs  constant.rs  cooperative.rs  derivative.rs  function_argument.rs  image.rs  literal.rs  load.rs  math.rs  mod.rs  override.rs  ray_query.rs  relational.rs  select.rs  splat.rs  subgroup.rs  swizzle.rs  unary.rs  variable.rs  workgroup.rs  zero_value.rs
naga-interpreter/src/compiler/statement/: atomic.rs  barrier.rs  block.rs  break.rs  call.rs  continue.rs  emit.rs  if.rs  image.rs  kill.rs  loop.rs  mod.rs  ray_query.rs  return.rs  store.rs  subgroup.rs  switch.rs  work_group.rs
naga-interpreter/src/cranelift/: bindings.rs  compiler.rs  mod.rs  module.rs  tests.rs
naga-interpreter/src/interpreter/: bindings.rs  interpreter.rs  memory.rs  mod.rs  module.rs  tests.rs  variable.rs
src/: adapter.rs  buffer.rs  command.rs  device.rs  engine.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  render_pass.rs  surface.rs  texture.rs
src/shader/: bindings.rs  eval.rs  interpreter.rs  memory.rs  mod.rs  util.rs
src/util/: mod.rs  scanline.rs
wgpu-cpu/: Cargo.toml
wgpu-cpu-tests/: Cargo.toml
wgpu-cpu-tests/src/: main.rs  util.rs
wgpu-cpu-tests/src/tests/: colored_triangle.rs  colored_triangle.wgsl  mod.rs
wgpu-cpu/examples/: depth.wgsl  hello_mesh.rs  hello_shader.rs  hello_shader.wgsl  hello_teapot.rs  hello_teapot.wgsl  hello_texture.rs  hello_texture.wgsl
wgpu-cpu/src/: adapter.rs  bind_group.rs  buffer.rs  command.rs  device.rs  instance.rs  lib.rs  pipeline.rs  render_pass.rs  sampler.rs  shader.rs  surface.rs  texture.rs
wgpu-cpu/src/render_pass/: binding.rs  clipper.rs  color_attachment.rs  depth_stencil_attachment.rs  fragment.rs  index.rs  mod.rs  primitive.rs  raster.rs  rasterizer.rs  state.rs  vertex.rs
wgpu-cpu/src/shader/: fragment.rs  mod.rs  vertex.rs
wgpu-cpu/src/util/: bresenham.rs  interpolation.rs  mod.rs  scanline.rs  sort.rs
wgpu-cpu/src/util/sync/: wait.rs
wgpu-cpu/tests/: colored_triangle.rs
