[package]
name = "wgpu-cpu"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bytemuck = "1.24.0"
derive_more = { version = "2.1.0", features = ["as_ref", "debug", "deref", "deref_mut", "from", "into"] }
half = { version = "2.7.1", features = ["bytemuck"] }
image = { version = "0.25.9", optional = true }
itertools = "0.14.0"
naga = { version = "27.0.0", features = ["wgsl-in"] }
nalgebra = { version = "0.34.1", default-features = false, features = [
    "bytemuck",
] }
num-traits = "0.2.19"
parking_lot = "0.12.5"
softbuffer = { version = "0.4.6", optional = true }
thiserror = "2.0.17"
tracing = "0.1.43"
wgpu = { version = "27.0.0", default-features = false, features = [
    "custom",
    "wgsl",
] }

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
pollster = "0.4.0"
tracing-subscriber = "0.3.22"
winit = "0.30.12"

[features]
default = ["full"]
full = ["softbuffer", 'image']
softbuffer = ["dep:softbuffer"]
image = ["dep:image"]

[patch.crates-io]
wgpu = { path = "../wgpu/wgpu" }
naga = { path = "../wgpu/naga" }
