[workspace]
resolver = "2"
members = ["naga-interpreter", "wgpu-cpu", "wgpu-cpu-tests"]

[patch.crates-io]
wgpu = { git = "https://github.com/jgraef/wgpu.git", branch = "switch/cpu-renderer" }
naga = { git = "https://github.com/jgraef/wgpu.git", branch = "switch/cpu-renderer" }
approx = { git = "https://github.com/jgraef/approx.git", branch = "array" }
