[package]
name = "naga-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
derive_more = { version = "2.1.0", features = ["debug"] }
half = { version = "2.7.1", features = ["bytemuck"] }
naga = "27.0.0"
nalgebra = { version = "0.34.1", default-features = false, features = [
    "bytemuck",
] }
num-traits = "0.2.19"
thiserror = "2.0.17"
tracing = "0.1.43"
