[package]
name = "naga-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bytemuck = "1.24.0"
cranelift-codegen = { version = "0.126.1", optional = true }
cranelift-frontend = { version = "0.126.1", optional = true }
cranelift-jit = { version = "0.126.1", optional = true }
cranelift-module = { version = "0.126.1", optional = true }
cranelift-native = { version = "0.126.1", optional = true }
derive_more = { version = "2.1.0", features = ["debug", "from", "into"] }
either = "1.15.0"
half = { version = "2.7.1", features = ["bytemuck"] }
memoffset = "0.9.1"
naga = "28.0.0"
thiserror = "2.0.17"
tracing = "0.1.43"

[dev-dependencies]
approx = "0.5.1"
naga = { version = "28.0.0", features = ["wgsl-in"] }

[features]
interpreter = []
compiler = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]
