[package]
name = "wgpu-cpu"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.10.0"
bytemuck = { version = "1.24.0", features = ["must_cast"] }
derive_more = { version = "2.1.0", features = [
    "as_ref",
    "debug",
    "deref",
    "deref_mut",
    "from",
    "into",
] }
image = { version = "0.25.9", optional = true }
itertools = "0.14.0"
# we need to enable one of a few out features to enable `naga::back::pipeline_constants::process_overrides`
naga = { version = "28.0.0", features = ["wgsl-in", "glsl-out"] }
naga-interpreter = { version = "0.1.0", path = "../naga-interpreter", features = [
    "interpreter",
    "compiler",
] }
nalgebra = { version = "0.34.1", default-features = false, features = [
    "bytemuck",
] }
num-traits = "0.2.19"
parking_lot = { version = "0.12.5", features = ["arc_lock", "send_guard"] }
softbuffer = { version = "0.4.6", optional = true }
thiserror = "2.0.17"
tracing = "0.1.43"
wgpu = { version = "28.0.0", default-features = false, features = [
    "custom",
    "wgsl",
] }

[dev-dependencies]
approx = "0.5.1"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
pollster = "0.4.0"
tobj = "4.0.3"
tracing-subscriber = "0.3.22"
winit = "0.30.12"

[features]
default = ["full"]
full = ["softbuffer", 'image']
softbuffer = ["dep:softbuffer"]
image = ["dep:image"]
